# worklifebalance_bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  build.sh  docker-compose.yml  pyproject.toml  template.env
punch_clock/: data.py  database.py  main.py
punch_clock_gpt/: data.py  main.py  settings.toml
src/: database.py  main.py
tests/: test_database.py
