[tool.poetry]
name = "stempeluhr"
version = "0.1.0"
description = ""
authors = ["altepizza"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest-watcher = "^0.3.4"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
